--- a/app/src/main/res/layout/widget_weather_simple.xml
+++ b/app/src/main/res/layout/widget_weather_simple.xml
@@ -56,6 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:gravity="center"
             android:padding="5dp"
             android:drawableEnd="@drawable/baseline_refresh_white_18"
             android:text="@string/guide_update_time"
