--- a/app/src/main/res/layout/widget_weather_vertical.xml
+++ b/app/src/main/res/layout/widget_weather_vertical.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="6dp"
+            android:layout_marginBottom="3dp"
             android:orientation="vertical">
 
             <TextView
@@ -57,10 +57,14 @@
                 android:gravity="center"
                 android:text="@string/guide_place_name"
                 android:textColor="@color/colorWhite"
-                android:layout_marginBottom="3dp"
                 android:textSize="18dp"
                 tools:ignore="SpUsage" />
-
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/lo_refresh_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
             <TextView
                 android:id="@+id/tv_widget_dust_pm10"
                 android:layout_width="wrap_content"
@@ -80,18 +84,17 @@
                 android:textColor="@color/colorWhite"
                 android:textSize="16dp"
                 tools:ignore="SpUsage" />
+            <TextView
+                android:id="@+id/tv_widget_update_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:drawableEnd="@drawable/baseline_refresh_white_18"
+                android:text="@string/guide_update_time"
+                android:textColor="@color/colorWhite"
+                android:textSize="16dp"
+                tools:ignore="SpUsage" />
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/tv_widget_update_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:drawableEnd="@drawable/baseline_refresh_white_18"
-            android:text="@string/guide_update_time"
-            android:textColor="@color/colorWhite"
-            android:textSize="16dp"
-            tools:ignore="SpUsage" />
     </LinearLayout>
 
     <ProgressBar
