Modify widget : dynamical resize

--- a/app/src/main/res/xml/widget_simple_info_weather.xml
+++ b/app/src/main/res/xml/widget_simple_info_weather.xml
@@ -4,5 +4,6 @@
     android:minWidth="160dp"
     android:minHeight="160dp"
     android:resizeMode="horizontal|vertical"
+    android:previewImage="@drawable/widget_preview_simple"
     android:updatePeriodMillis="3600000"
     android:widgetCategory="home_screen" />
