--- a/app/src/main/res/xml/widget_info_weather.xml
+++ b/app/src/main/res/xml/widget_info_weather.xml
@@ -3,7 +3,7 @@
     android:initialLayout="@layout/widget_weather_vertical"
     android:minWidth="160dp"
     android:minHeight="160dp"
-    android:previewImage="@drawable/widget_preview"
+    android:previewImage="@drawable/widget_preview_default"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="3600000"
     android:widgetCategory="home_screen" />
