--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -117,10 +117,10 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginStart="5dp"
+                            android:layout_gravity="bottom"
+                            android:layout_marginStart="3dp"
                             android:text="@string/symbol_celsius"
-                            android:textSize="36dp"
+                            android:textSize="32dp"
                             tools:ignore="SpUsage" />
 
                         <LinearLayout
@@ -180,7 +180,6 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:layout_marginStart="5dp"
-                                android:padding="5dp"
                                 android:textSize="24dp"
                                 app:setArea="@{areaVm.area}"
                                 app:setPosition="@{position}"
@@ -190,9 +189,10 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center"
+                                android:layout_gravity="bottom"
+                                android:layout_marginStart="2dp"
                                 android:text="@string/symbol_percent"
-                                android:textSize="24dp"
+                                android:textSize="20dp"
                                 tools:ignore="SpUsage" />
                         </LinearLayout>
                     </LinearLayout>
@@ -248,18 +248,20 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="5dp"
+                            android:layout_gravity="bottom"
+                            android:layout_marginStart="3dp"
                             android:text="@string/symbol_celsius"
-                            android:textSize="21dp"
+                            android:textSize="18dp"
                             tools:ignore="SpUsage" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginEnd="10dp"
+                            android:layout_gravity="center"
+                            android:layout_marginStart="7dp"
+                            android:layout_marginEnd="7dp"
                             android:text="@string/symbol_slash"
-                            android:textSize="21dp"
+                            android:textSize="18dp"
                             tools:ignore="SpUsage" />
 
                         <TextView
@@ -275,9 +277,10 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="5dp"
+                            android:layout_gravity="bottom"
+                            android:layout_marginStart="2dp"
                             android:text="@string/symbol_celsius"
-                            android:textSize="21dp"
+                            android:textSize="18dp"
                             tools:ignore="SpUsage" />
                     </LinearLayout>
 
@@ -308,9 +311,10 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="5dp"
+                            android:layout_marginStart="2dp"
+                            android:layout_gravity="bottom"
                             android:text="@string/symbol_celsius"
-                            android:textSize="18dp"
+                            android:textSize="16dp"
                             tools:ignore="SpUsage" />
 
                         <LinearLayout
@@ -492,8 +496,7 @@
                     android:layout_marginBottom="15dp"
                     android:orientation="vertical"
                     android:padding="5dp"
-                    app:createLifeDay="@{weatherVm.lifeIndexDay}"
-                    app:createLifeHour="@{weatherVm.lifeIndexHour}"
+                    app:createLife="@{weatherVm.lifeIndex}"
                     app:setArea="@{areaVm.area}"
                     app:setPosition="@{position}">
 
