--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -42,5 +42,27 @@
                 android:checked="@={settingVm.useLocation}" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="@string/text_agree_notification"
+                android:textSize="17dp"
+                tools:ignore="SpUsage" />
+
+            <Switch
+                android:id="@+id/sw_use_notify"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:checked="@={settingVm.useNotify}" />
+        </LinearLayout>
+
     </LinearLayout>
 </layout>
