--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -87,20 +87,20 @@
                         app:setSpecial="@{weatherVm.special}"
                         tools:ignore="SpUsage" />
 
+                    <ImageView
+                        android:id="@+id/iv_sky_state"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:layout_gravity="center"
+                        app:setArea="@{areaVm.area}"
+                        app:setPosition="@{position}"
+                        app:setSky="@{weatherVm.currentWeather}"
+                        tools:ignore="ContentDescription" />
+
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center">
-
-                        <ImageView
-                            android:id="@+id/iv_sky_state"
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:layout_gravity="center"
-                            app:setArea="@{areaVm.area}"
-                            app:setPosition="@{position}"
-                            app:setSky="@{weatherVm.currentWeather}"
-                            tools:ignore="ContentDescription" />
 
                         <TextView
                             android:id="@+id/tv_forecast_now_tpr_info"
@@ -139,6 +139,7 @@
                                 android:text="@string/symbol_left_block"
                                 android:textSize="28dp"
                                 tools:ignore="SpUsage" />
+
                             <TextView
                                 android:id="@+id/tv_gap_between_tpr"
                                 android:layout_width="wrap_content"
@@ -159,41 +160,94 @@
                                 android:textSize="28dp"
                                 tools:ignore="SpUsage" />
                         </LinearLayout>
+                    </LinearLayout>
 
-                        <LinearLayout
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center">
+
+                        <ImageView
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/icons8_hygrometer_24"
+                            tools:ignore="ContentDescription" />
+
+                        <TextView
+                            android:id="@+id/tv_forecast_now_reh_info"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginStart="20dp">
+                            android:layout_marginStart="5dp"
+                            android:textSize="24dp"
+                            app:setArea="@{areaVm.area}"
+                            app:setPosition="@{position}"
+                            app:setReh="@{weatherVm.currentWeather}"
+                            tools:ignore="SpUsage" />
 
-                            <ImageView
-                                android:layout_width="24dp"
-                                android:layout_height="24dp"
-                                android:layout_gravity="center"
-                                android:src="@drawable/icons8_hygrometer_24"
-                                tools:ignore="ContentDescription" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom"
+                            android:layout_marginStart="2dp"
+                            android:text="@string/symbol_percent"
+                            android:textSize="22dp"
+                            tools:ignore="SpUsage" />
 
-                            <TextView
-                                android:id="@+id/tv_forecast_now_reh_info"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_marginStart="5dp"
-                                android:textSize="24dp"
-                                app:setArea="@{areaVm.area}"
-                                app:setPosition="@{position}"
-                                app:setReh="@{weatherVm.currentWeather}"
-                                tools:ignore="SpUsage" />
+                        <ImageView
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_gravity="center"
+                            android:layout_marginStart="10dp"
+                            android:src="@drawable/icon_wind_48"
+                            tools:ignore="ContentDescription" />
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="bottom"
-                                android:layout_marginStart="2dp"
-                                android:text="@string/symbol_percent"
-                                android:textSize="22dp"
-                                tools:ignore="SpUsage" />
-                        </LinearLayout>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
+                            android:gravity="center"
+                            android:textSize="24dp"
+                            app:setArea="@{areaVm.area}"
+                            app:setPosition="@{position}"
+                            app:setWsd="@{weatherVm.currentWeather}"
+                            tools:ignore="SpUsage" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom"
+                            android:layout_marginStart="2dp"
+                            android:text="@string/symbol_m_per_s"
+                            android:textSize="22dp"
+                            tools:ignore="SpUsage" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="@string/symbol_left_block"
+                            android:textSize="20dp"
+                            tools:ignore="SpUsage" />
+
+                        <ImageView
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/icon_wind_point_48"
+                            app:setArea="@{areaVm.area}"
+                            app:setPosition="@{position}"
+                            app:setVec="@{weatherVm.currentWeather}" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="@string/symbol_right_block"
+                            android:textSize="20dp"
+                            tools:ignore="SpUsage" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -201,7 +255,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_marginStart="20dp"
                         app:setArea="@{areaVm.area}"
                         app:setPosition="@{position}"
                         app:setVisibility="@{weatherVm.currentWeather}">
@@ -238,6 +291,7 @@
                             android:id="@+id/tv_forecast_now_tpr_min_info"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:drawableStart="@drawable/icon_arrow_long_down_blue_48"
                             android:textSize="21dp"
                             app:setArea="@{areaVm.area}"
                             app:setMinMax="@{weatherVm.minMaxTpr}"
@@ -268,6 +322,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="21dp"
+                            android:drawableStart="@drawable/icon_arrow_long_up_red_48"
                             app:setArea="@{areaVm.area}"
                             app:setMinMax="@{weatherVm.minMaxTpr}"
                             app:setPosition="@{position}"
@@ -310,8 +365,8 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="2dp"
                             android:layout_gravity="bottom"
+                            android:layout_marginStart="2dp"
                             android:text="@string/symbol_celsius"
                             android:textSize="16.5dp"
                             tools:ignore="SpUsage" />
